--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
               <li><a href="https://www.linkedin.com/in/muchlas-syahlanisyiam-1a3356175/" target="_blank"><img src="assets/img/linkedin.svg" alt="Linked In"></a></li>
             </ul>
           </div>
-          <div class="col-md-12 col-lg-6 align-self-center">
+          <div class="col-md-12 col-lg-6 align-self-center mt-md-5 mt-lg-none">
             <ul class="footer-info">
               <li class="mb-3">
                 <a href="#">
